--- a/templates/result.html
+++ b/templates/result.html
@@ -30,13 +30,14 @@
 		</div>
 
 		<!-- Footer -->
-       <div class='footer'>
-           <div class="contact">
-               <a target="_blank" href="https://github.com/anujvyas/Diabetes-Prediction-Deployment"><i class="fab fa-github fa-lg contact-icon"></i></a>
-               <a target="_blank" href="https://www.linkedin.com/in/anujkvyas"><i class="fab fa-linkedin fa-lg contact-icon"></i></a>
-           </div>
-           <p class='footer-description'>Made with ❤️ by Anuj Vyas.</p>
-       </div>
+       <div class="card mb-3">
+
+            <h2 > Gokul Reddy<br>
+                  I am Pursuing My B.E 2nd year,Wanna Become a Data Scientist and Love Machine learning&Deep Learning.<br>
+                  Click the link below to know about me!<br>
+            </h2>
+             <a href="https://www.linkedin.com/in/gokul-talla" class="btn btn-primary" target="_blank">Linkedin</a>
+        </div>
 
 	</body>
 </html>
